--- a/inst/PLS_scratchpad.Rmd
+++ b/inst/PLS_scratchpad.Rmd
@@ -47,6 +47,7 @@ require(rvest) #scrape from IMLS
 require(data.table) #handle CSVs 
 require(purrr) #do multiple things at once
 require(furrr) #same 
+require(stringr) #string wrangling
 ```
 
 ### retrieve files 
@@ -121,3 +122,15 @@ WISHLIST: Would like to not duplicate as much labor identifying FYs
 2023.03.27, night: Okay yes I think the responsible thing to do is stop and back up to year-by-year handling. Although... `subfiles` is free batched test for doing that, I suppose.
 
 ### process year-on-year `subfiles` 
+
+Which FY is it?
+```{r}
+fy_pattern <- 'FY20..'
+names(subfiles) <- stringr::str_extract(subfys, fy_pattern)
+```
+
+Which file is which?
+```{r}
+
+```
+
