--- a/inst/PLS_scratchpad_2.Rmd
+++ b/inst/PLS_scratchpad_2.Rmd
@@ -200,3 +200,9 @@ furrr::future_map(.x = year, .f = get_pls_csv)
 
 4. `(chore tk)` -- figure out best way to vectorize (2) and (3) over the results of (1) without duplicating work
 5. **(regroup for strategy here)** -- this is the part where we get to actually combine the files. Alexander if you don't stop and reevaluate how to do so when you get here I will punt you like the football.
+
+---
+
+04/02 breakpoint: Now that both halves of the functionality work, I'd like to combine get_pls_zip and get_pls_csv. Currently there's back-and-forth redundancy happening that wouldn't be an issue if metadata was persisting instead of being reduced to a return.
+
+GOTO scratchpad #3 maybe?
