--- a/inst/PLS_scratchpad_2.Rmd
+++ b/inst/PLS_scratchpad_2.Rmd
@@ -224,6 +224,6 @@ download.file(url = 'https://www.imls.gov/research-evaluation/data-collection/pu
 ```
 ```{r}
 writeLines(pls, con = 'PLS_URL_snapshot.txt')
-pls_read <- readLines(con = file.choose())
+# pls_read <- readLines(con = file.choose())
 ```
 
